--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -3,11 +3,16 @@
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 
- <div class="container">
-      <div>
-        <h1 class="display-3">¡Bienvenid@ a SellDesign!</h1>
-        <p class="lead">Regístrate o identificate para comenzar a vender tus diseños.</p>
-        <p><a class="btn btn-lg btn-success" href="/login" role="button">Acceder</a></p>
-        <p><a class="btn btn-lg btn-success" href="/register" role="button">Registro</a></p>
-      </div>
-</div> <!-- /container -->
+<div class="sidenav">
+    <div class="login-main-text">
+        <h2>SellDesign</h2>
+        <p>¡Gana dinero vendiendo tus diseños!</p>
+        <div>
+            <p><a class="btn btn-primary" href="/login" role="button">Acceder</a></p>
+        </div>
+        <hr />
+        <div>
+            <p><a class="btn btn-secondary" href="/register" role="button">Registrame</a></p>
+        </div>
+    </div>
+</div>
