--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,44 @@
-<p>register works!</p>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="sidenav">
+         <div class="login-main-text">
+            <h2>SellDesign</h2>
+            <p>¡Gana dinero vendiendo tus diseños!</p>
+         </div>
+      </div>
+      <div class="main">
+         <div class="col-md-4 col-sm-12">
+            <div class="register-form">
+               <form>
+                  <div class="form-group">
+                     <label>Usuario</label>
+                     <input type="text" class="form-control" placeholder="Nombre de usuario">
+                  </div>
+                  <div class="form-group">
+                    <label>Correo</label>
+                    <input type="text" class="form-control" placeholder="Correo">
+                 </div>
+                  <div class="form-group">
+                     <label>Contraseña</label>
+                     <input type="password" class="form-control" placeholder="Contraseña">
+                  </div>
+                  <div class="form-group">
+                    <label>Confirmar contraseña</label>
+                    <input type="password" class="form-control" placeholder="Confirmar contraseña">
+                 </div>
+                  <div>
+                    <button type="submit" class="btn btn-black">Registrarme</button>
+                  </div>
+                  <hr/>
+                  <div>
+                    ¿Ya tienes cuenta?
+                    <p><a class="btn btn-secondary" href="/login" role="button">Acceder</a></p>
+     
+                  </div>
+               </form>
+            </div>
+         </div>
+      </div>
