--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -4,41 +4,42 @@
 <!------ Include the above in your HEAD tag ---------->
 
 <div class="sidenav">
-         <div class="login-main-text">
-            <h2>SellDesign</h2>
-            <p>¡Gana dinero vendiendo tus diseños!</p>
-         </div>
-      </div>
-      <div class="main">
-         <div class="col-md-4 col-sm-12">
-            <div class="register-form">
-               <form>
-                  <div class="form-group">
-                     <label>Usuario</label>
-                     <input type="text" class="form-control" placeholder="Nombre de usuario">
-                  </div>
-                  <div class="form-group">
+    <div class="login-main-text">
+        <h2>SellDesign</h2>
+        <p>¡Gana dinero vendiendo tus diseños!</p>
+    </div>
+</div>
+<div class="main">
+    <div class="col-md-4 col-sm-12">
+        <div class="register-form">
+            <form>
+                <div class="form-group">
+                    <label>Usuario</label>
+                    <input type="text" [(ngModel)]="username" name="username" class="form-control"
+                        placeholder="Nombre de usuario">
+                </div>
+                <div class="form-group">
                     <label>Correo</label>
-                    <input type="text" class="form-control" placeholder="Correo">
-                 </div>
-                  <div class="form-group">
-                     <label>Contraseña</label>
-                     <input type="password" class="form-control" placeholder="Contraseña">
-                  </div>
-                  <div class="form-group">
+                    <input type="email" [(ngModel)]="email" name="email" class="form-control" placeholder="Correo">
+                </div>
+                <div class="form-group">
+                    <label>Contraseña</label>
+                    <input type="password" [(ngModel)]="password" name="password" class="form-control" placeholder="Contraseña">
+                </div>
+                <div class="form-group">
                     <label>Confirmar contraseña</label>
-                    <input type="password" class="form-control" placeholder="Confirmar contraseña">
-                 </div>
-                  <div>
-                    <button type="submit" class="btn btn-black">Registrarme</button>
-                  </div>
-                  <hr/>
-                  <div>
+                    <input type="password" [(ngModel)]="confirmPassword" name="confirmPassword" lass="form-control"
+                        placeholder="Confirmar contraseña">
+                </div>
+                <div>
+                    <button type="submit" (click)="register()" class="btn btn-black">Registrarme</button>
+                </div>
+                <hr />
+                <div>
                     ¿Ya tienes cuenta?
                     <p><a class="btn btn-secondary" href="/login" role="button">Acceder</a></p>
-     
-                  </div>
-               </form>
-            </div>
-         </div>
-      </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
