--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,16 +10,22 @@
          </div>
       </div>
       <div class="main">
-         <div class="col-md-4 col-sm-12">
+         <div class="col-md-6 col-sm-12">
             <div class="login-form">
                <form>
                   <div class="form-group">
                      <label>Usuario</label>
                      <input type="text" [(ngModel)]="username" name="username" class="form-control" placeholder="Nombre de usuario">
+                     <div class="text-danger" *ngIf=emptyName>
+                        Nombre requerido
+                     </div>
                   </div>
                   <div class="form-group">
                      <label>Contraseña</label>
                      <input type="password" [(ngModel)]="password" name="password" class="form-control" placeholder="Contraseña">
+                     <div class="text-danger" *ngIf=emptyPassword>
+                        Contraseña requerida
+                     </div>
                   </div>
                   <div>
                     <button type="submit" (click)="login()" class="btn btn-black">Acceder</button>
