--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,4 +1,4 @@
-<div>  
+<div style="height: 100px;">  
     <nav class="navbar navbar-expand-lg bg-light border-bottom border-dark">
         <div class="container-fluid">
         <a class="navbar-brand" href="#">Navbar</a>
@@ -19,21 +19,45 @@
         </div>
     </nav>
 
-    <div class="container p-1">
-        <img src={{viewProduct.mainImage}} class="card-img-left"  alt="...">
-        <div style="display:inline-block;vertical-align:top; width: 600px; height: 380px;padding: 5px;">
-            {{viewProduct.productName}} --- {{viewProduct.designName}}
-            <strong>{{viewProduct.price}}€</strong>
-            {{viewProduct.description}}
+    <div class="container p-1" style="width: 100%;">
+        <div style="width: 30%;float: left;align-items: center;">
+            <img src={{viewProduct.mainImage}} class="card-img-left"  alt="..." style="width: 100%;">
+            <!--{% if {{viewProduct.favourite}}==true %} 
+            <img src={{viewProduct.favouriteImage}} class="card-img-left"  alt="..." style="width: 5%;margin:auto;">
+            {% endif %}-->
+            <div>
+                <ul class="row row-cols-4" style="align-items: center;">
+                    <li *ngFor="let image of viewProduct.images" class="list-group-item p-2" s>
+                        <img src={{image}} class="card-img-top" alt="..." width="25%">
+                        <div class="card-body">
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
-        
+        <div class="container p-2" style="width: 600px; height: 380px;float: left;position: relative;">
+            <strong>{{viewProduct.productName}}</strong>
+            <br/>
+            DESCRIPCION: {{viewProduct.description}}
+            <br/>
+                <a style='display:inline-block;width: 50%;' >
+                    <strong>Diseñador: </strong> {{viewProduct.designerName}}
+                </a>
+                <a style="text-align:right;display:inline-block;width: 50%;">
+                    <strong>Diseño: </strong>{{viewProduct.designName}}
+                </a>
+            <br/><strong>{{viewProduct.price}}€</strong>
+        </div>
     </div>
 
-    <footer>
+    <!--footer style="position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 5%;">
         <nav class="navbar navbar-expand-lg bg-light p-5 border-top border-dark">
             <div class="container-fluid d-flex justify-content-center">
                 <h1 class="text-center">Aqui habra cosas que no le importan nunca a nadie</h1>
             </div>
         </nav>
-    </footer>
+    </footer-->
 </div>
