footer bien aplicado

--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -22,9 +22,9 @@
     <div class="container p-1" style="width: 100%;">
         <div style="width: 30%;float: left;align-items: center;">
             <img src={{viewProduct.mainImage}} class="card-img-left"  alt="..." style="width: 100%;">
-            <div style="text-align:center;">
+            <!--div style="text-align:center;">
                 <img src={{viewProduct.favouriteImage}} class="card-img-left"  alt="..." style="width: 5%;margin:auto;">
-            </div>
+            </div-->
             
             <div>
                 <ul class="row row-cols-4" style="align-items: center;">
@@ -51,14 +51,11 @@
         </div>
     </div>
 
-    <!--footer style="position: relative;
-    bottom: 0;
-    width: 100%;
-    height: 5%;">
+    <footer style="position: absolute;bottom: 0;width: 100%;height: 5%;">
         <nav class="navbar navbar-expand-lg bg-light p-5 border-top border-dark">
             <div class="container-fluid d-flex justify-content-center">
                 <h1 class="text-center">Aqui habra cosas que no le importan nunca a nadie</h1>
             </div>
         </nav>
-    </footer-->
+    </footer>
 </div>
