--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -19,9 +19,11 @@
         </div>
     </nav>
 
-    <div class="container p-1" style="width: 100%;">
-        <div style="width: 30%;float: left;align-items: center;">
-            <img src={{viewProduct.mainImage}} class="card-img-left"  alt="..." style="width: 100%;">
+    <div class="container p-1" style="width: 100%;height: 100%;">
+        <div style="width: 30%;float: left;align-items:center;
+        padding-right: 60px;
+        margin-right: 60px;">
+            <img src={{viewProduct.mainImage}} class="card-img-left"  alt="..." style="width: 100%;max-height: fit-content  ;">
             <!--div style="text-align:center;">
                 <img src={{viewProduct.favouriteImage}} class="card-img-left"  alt="..." style="width: 5%;margin:auto;">
             </div-->
@@ -36,7 +38,8 @@
                 </ul>
             </div>
         </div>
-        <div class="container p-2" style="width: 600px; height: 380px;float: left;position: relative;">
+        
+        <div class="container p-2" style="width: 600px; height: 380px;padding-top:100px;float: left;position: relative;">
             <strong>{{viewProduct.productName}}</strong>
             <br/>
             DESCRIPCION: {{viewProduct.description}}
@@ -48,6 +51,14 @@
                     <strong>Diseño: </strong>{{viewProduct.designName}}
                 </a>
             <br/><strong>{{viewProduct.price}}€</strong>
+            <br/>
+            <div style="text-align:left;display:inline-block;width: 50%;">
+                <button (click)="buy()" type="button" class="btn btn-primary" >Comprar Ya</button>
+            </div>
+            <div style="text-align:right;display:inline-block;width: 50%;">
+                <button (click)="addToCart()" type="button" class="btn btn-success" >Añadir a mi carro</button>
+            </div>
+             
         </div>
     </div>
 
