--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,8 +4,8 @@
             <div class="card" style="width: 18rem;">
                 <img src={{product.image}} class="card-img-top" alt="...">
                 <div class="card-body">
-                <p class="card-text">{{product.productName}} --- {{product.designName}}</p>
-                <p class="card-text"><strong>{{product.price}}€</strong></p>
+                <p class="card-text">{{product.tipo}} --- {{product.design.name}}</p>
+                <p class="card-text"><strong>{{product.precio}}€</strong></p>
                 </div>
             </div>
         </li>
