changed redirects to hashlocation (otherwise deployment bugs on refresh)

--- a/src/app/components/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/components/barra-navegacion/barra-navegacion.component.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a href="/home">
+  <a href="/#/home">
     <img src="../assets/images/Logo.svg" width="200" height="50" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -11,7 +11,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="MiCarrito">
+        <a class="nav-link" href="/#/MiCarrito">
           <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-cart"
             viewBox="0 0 16 16">
             <path
@@ -30,11 +30,11 @@
           </svg>
         </div>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="Perfil">Mi Perfil</a>
+          <a class="dropdown-item" href="/#/Perfil">Mi Perfil</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="MisDiseños">Mis diseños</a>
+          <a class="dropdown-item" href="/#/MisDiseños">Mis diseños</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="MisProductos">Mis productos</a>
+          <a class="dropdown-item" href="/#/MisProductos">Mis productos</a>
           <div class="dropdown-divider"></div>
           <button class="dropdown-item" type="submit" (click)="cerrarSesion()">Cerrar Sesión</button>
         </div>
