--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -59,7 +59,7 @@
           <div class="col-md-4 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
             <div class="text-center ">
-              <a href="">
+              <a href="/home">
                 <img src="../assets/images/Logo.svg" width="150" height="50" alt="">
               </a>
             </div>
@@ -157,7 +157,7 @@
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
       © 2022 Copyright:
-      <a class="text-reset fw-bold" href="">SellDesign.es</a>
+      <a class="text-reset fw-bold" href="/home">SellDesign.es</a>
     </div>
     <!-- Copyright -->
   </footer>
