--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,16 @@
 <div class="container p-1">
+    <div class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-filter" viewBox="0 0 16 16">
+        <path d="M6 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"/>
+        </svg>
+      </div>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <button class="dropdown-item" (click)="filterPrice(1,30)">1€ - 30€</button>
+        <div class="dropdown-divider"></div>
+        <button class="dropdown-item" (click)="filterPrice(30,70)">31€ - 70€</button>
+        <div class="dropdown-divider"></div>
+        <button class="dropdown-item" (click)="filterPrice(71,1000)">71€ o más</button>
+      </div>
     <ul class="row row-cols-4">
         <li *ngFor="let product of newProducts" class="list-group-item p-2">
             <div class="card" style="width: 18rem;">
