--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -64,7 +64,7 @@
               </a>
             </div>
             <p style="text-align: justify;">
-              Esta empresa está formada por estudiantes y se fundó con fines de aprendizaje para la asigantura
+              Esta empresa está formada por estudiantes y se fundó con fines de aprendizaje para la asignatura
               Gestión de Proyecto Software de la Universidad de Zaragoza.
             </p>
           </div>
@@ -130,7 +130,7 @@
                     d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
                   <path fill-rule="evenodd"
                     d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
-              </svg> Zaragoza, ZGZ 50018,ES
+              </svg> Zaragoza, ZGZ 50018, ES
             </p>
             <p>
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
