--- a/src/app/components/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/components/barra-navegacion/barra-navegacion.component.html
@@ -42,7 +42,7 @@
     </ul>
 
     <form class="form-inline my-2 my-lg-0 d-flex" style="padding-right: 5rem;">
-      <input class="form-control mr-sm-2" type="search" placeholder={{busqueda}} aria-label="Search" [(ngModel)]="busqueda" name="busqueda">
+      <input class="form-control mr-sm-2" type="search" placeholder="Buscar algo..."  aria-label="Search" [(ngModel)]="busqueda" name="busqueda">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="buscar()">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
           viewBox="0 0 16 16">
