fix boton registro

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -33,7 +33,7 @@
                   <hr/>
                   <div>
                     ¿No tienes cuenta?
-                    <p><a class="btn btn-secondary" href="/register" role="button">Registrame</a></p>
+                    <p><a class="btn btn-secondary" href="/#/register" role="button">Registrame</a></p>
      
                   </div>
                </form>
