--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -66,7 +66,7 @@
                 <hr />
                 <div>
                     ¿Ya tienes cuenta?
-                    <p><a class="btn btn-secondary" href="/login" role="button">Acceder</a></p>
+                    <p><a class="btn btn-secondary" href="/#/login" role="button">Acceder</a></p>
                 </div>
             </form>
         </div>
