--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -40,14 +40,14 @@
             <div class="card" style="width: 18rem;">
                 <img src={{product.image}} class="card-img-top" alt="...">
                 <div class="card-body">
-                <p class="card-text">{{product.tipo}} --- {{product.design.name}}</p>
-                <p class="card-text"><strong>{{product.precio}}€</strong></p>
+                <p class="card-text">{{product.type}} --- {{product.design.name}}</p>
+                <p class="card-text"><strong>{{product.price}}€</strong></p>
                 </div>
             </div>
         </li>
     </ul>
     
-    <div class="d-flex justify-content-center p-2">
+    <div *ngIf="noHayProductos == false" class="d-flex justify-content-center p-2">
         <button class="btn btn-lg btn-outline-dark" (click)="getMore()">Cargar más</button>
     </div>
 </div>
