--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -1,11 +1,10 @@
 <div>
     <!-- USUARIO -->
     <div class="card-body text-center">
-        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
-            class="rounded-circle img-fluid" style="width: 150px;">
-        <h5 class="my-3">John Smith</h5>
-        <p class="text-muted mb-1">Full Stack Developer</p>
-        <p class="text-muted mb-4">Bay Area, San Francisco, CA</p>
+        <img src="https://estaticos.muyinteresante.es/uploads/images/gallery/5f96c5745bafe85c04aac28e/1-monte-everest.jpg" alt="avatar"
+            class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
+        <h5 class="mt-3">{{this.nombre}}</h5>
+        <p class="text-muted mb-4">{{this.descripcion}}</p>
         <div class="d-flex justify-content-center mb-2">
             <!-- <button type="file" class="btn btn-primary">Editar Foto</button> -->
             <div class="btn btn-primary">Editar Foto</div>
@@ -14,8 +13,7 @@
             <br>
 
             <!-- <input type="file" class="btn btn-primary" accept="image/png, image/jpg"> -->
-            <button type="button" class="btn btn-outline-primary ms-1">Editar Perfil</button>
-            <button class="btn btn-primary" (click)="openModal()">Open modal</button>
+            <button type="button" class="btn btn-outline-primary ms-1" (click)="openModal()">Editar Perfil</button>
         </div>
     </div>
     
