--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,21 +1,21 @@
 <div style="height: 100px;">  
     <nav class="navbar navbar-expand-lg bg-light border-bottom border-dark">
         <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            </ul>
-            <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-        </div>
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                </ul>
+                <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
         </div>
     </nav>
 
@@ -30,7 +30,7 @@
             
             <div>
                 <ul class="row row-cols-4" style="align-items: center;">
-                    <li *ngFor="let image of viewProduct.images" class="list-group-item p-2" s>
+                    <li *ngFor="let image of viewProduct.imagesDesign" class="list-group-item p-2" s>
                         <img src={{image}} class="card-img-top" alt="..." width="25%">
                         <div class="card-body">
                         </div>
@@ -52,13 +52,18 @@
                 </a>
             <br/><strong>{{viewProduct.price}}€</strong>
             <br/>
-            <div style="text-align:left;display:inline-block;width: 50%;">
+            <div>
+                <div style="text-align:left;display:inline-block;width: 47.5%;">
                 <button (click)="buy()" type="button" class="btn btn-primary" >Comprar Ya</button>
             </div>
-            <div style="text-align:right;display:inline-block;width: 50%;">
+            <div style="text-align:center;display:inline-block;width: 47.5%;">
                 <button (click)="addToCart()" type="button" class="btn btn-success" >Añadir a mi carro</button>
             </div>
-             
+            
+            <img src={{viewProduct.favouriteImage}} class="card-img-rigth"  alt="..." style="width: 5%;display: inline-block;"> 
+            
+        </div>
+            
         </div>
     </div>
 
