--- a/src/app/components/mis-disenos/mis-disenos.component.html
+++ b/src/app/components/mis-disenos/mis-disenos.component.html
@@ -6,15 +6,19 @@
                 <img src={{product.image}} class="card-img-top" alt="...">
                 <div class="card-body">
                     <div class="card-text  d-flex">
-                        <p>{{product.designName}}</p>
+                        <p>{{product.name}}</p>
                         <button class="btn btn-lg btn-outline-dark" (click)="openModal(0, product)">Editar</button>
                     </div>
                 </div>
             </div>
         </li>
     </ul>
+    <div *ngIf="hayDesign == false">
+        <h1 style="text-align: center;">Todavía <strong>NO</strong> tienes <strong>DISEÑOS</strong></h1>
+    </div>
     <div class="d-flex justify-content-center p-2">
-        <div *ngIf="noHayDesign == false">
+        
+        <div *ngIf="hayDesignBoton == true">
             <button class="btn btn-lg btn-outline-dark" (click)="getMore()">Cargar más</button>
         </div>
         <button class="btn btn-lg btn-outline-dark" 
