--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -47,7 +47,7 @@
                 height: 100%;
                 top: 0;
                 left: 0;
-                z-index: 1;" href="/#/product/{{product._id}}"></a>
+                z-index: 1;" href="/#/product" (click)="sendArgument(product._id)"></a>
                 </div>
             </div>
         </li>
