--- a/src/app/components/modal-edit-diseno/modal-edit-diseno.component.html
+++ b/src/app/components/modal-edit-diseno/modal-edit-diseno.component.html
@@ -1,6 +1,6 @@
 <div class="modal-content">
     <div class="modal-header">
-        <h5 *ngIf="esEditar == true" class="modal-title" id="exampleModalLabel">Editando <strong>PERFIL</strong> ...</h5>
+        <h5 *ngIf="esEditar == true" class="modal-title" id="exampleModalLabel">EDITANDO <strong>diseño</strong> ...</h5>
         <h5 *ngIf="esSubir == true" class="modal-title" id="exampleModalLabel"><strong>NUEVO</strong> diseño ...</h5>
         <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
     </div>
