--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -5,10 +5,16 @@
     margin-right: 60px;">
         <img src={{viewProduct.mainImage}} class="card-img-left"  alt="..." style="width: 100%;max-height: fit-content  ;">
         <ul class="row row-cols-4" style="align-items: center;">
-            <li *ngFor="let image of viewProduct.imagesDesign" class="list-group-item p-2">
+            <li *ngFor="let imageFuncional of imagesDesignFuncional" class="list-group-item p-2">
                 <div>
-                    <img src={{image}} class="card-img-top" alt="..." width="25%">
+                    <img src={{imageFuncional.imageDesign}} class="card-img-top" alt="..." width="25%">
                     <div class="card-body"></div>
+                    <a  style="position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                z-index: 1;" href="/#/product" (click)="sendArgument(imageFuncional.id)"></a>
                 </div>
             </li>
         </ul>
