--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -1,20 +1,20 @@
 <div>
     <!-- USUARIO -->
     <div class="card-body text-center">
-        <img src="https://estaticos.muyinteresante.es/uploads/images/gallery/5f96c5745bafe85c04aac28e/1-monte-everest.jpg" alt="avatar"
-            class="rounded-circle img-fluid" style="width: 150px; height: 150px;">
+        <label for="">
+            <img class="rounded-circle img-fluid" style="width: 150px; height: 150px;" alt="avatar" [src]="url ? url : 'https://estaticos.muyinteresante.es/uploads/images/gallery/5f96c5745bafe85c04aac28e/1-monte-everest.jpg'"> 
+        </label>
         <h5 class="mt-3">{{this.nombre}}</h5>
         <p class="text-muted mb-4">{{this.descripcion}}</p>
         <div class="d-flex justify-content-center mb-2">
-            <!-- <button type="file" class="btn btn-primary">Editar Foto</button> -->
-            <div class="btn btn-primary">Editar Foto</div>
-            <br>
-                <!-- <input id="fileInput" type='file' (change)="onSelectFile($event)"/>dsfsad -->
-            <br>
+            <div class="btn btn-primary ms-1">
+                <input style="display: none;" id="fileInput" type='file' (change)="onSelectFile($event)" accept="image/png, image/jpg"/>
+                <label  for="fileInput" style="cursor: pointer; margin-bottom: -5px;">Editar Foto</label>
+            </div>
 
-            <!-- <input type="file" class="btn btn-primary" accept="image/png, image/jpg"> -->
             <button type="button" class="btn btn-outline-primary ms-1" (click)="openModal()">Editar Perfil</button>
         </div>
+        <h1 *ngIf=hayErrorFoto style="color: red; margin-bottom: 1rem;">¡Ha habido un error al subir la foto!</h1>
     </div>
     
     <!-- DISEÑOS y FAVORITOS-->
