superposcion de fotos home

--- a/src/app/components/mi-carrito/mi-carrito.component.html
+++ b/src/app/components/mi-carrito/mi-carrito.component.html
@@ -1,1 +1,6 @@
-<p>mi-carrito works!</p>
+<div style="position: relative;">
+    <img src="https://camisetastheorigen.com/5465-large_default/camiseta-personalizada-hombre-color-naranja.jpg" width="400"  height="400"  />
+    <div style="position: absolute; top:0; left:0;">
+        <img  src="../assets/images/logo-Paypal.png" width="300" height="300" hspace="16" vspace="16" />
+    </div>
+</div>
