--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -35,13 +35,18 @@
     <h3 *ngIf=esNovedad><strong>NOVEDADES</strong>  de hoy filtro ({{this.precio}}, {{this.tipo}}):</h3> 
     <h3 *ngIf=esBusqueda><strong>RESULTADO</strong>  busqueda ('{{this.busqueda}}', {{this.precio}}, {{this.tipo}}):</h3>
     <h1 *ngIf=noHayProductos><strong>NO</strong> se ha encontrado ningún producto</h1> 
-    <ul class="row row-cols-4">
+    <ul class="row row-cols-4" style="padding: 0;">
         <li  *ngFor="let product of newProducts" class="list-group-item p-2">
-            <div class="card" style="width: 18rem;">
-                <img src={{product.image}} class="card-img-top" alt="...">
+            <div class="card" style="width: 18rem;"> <!-- // height: 35rem; -->
+                <div style="position: relative;">
+                    <img src={{product.image}} class="card-img-top"  height="350"  />
+                    <div style="position: absolute; top:10rem; left:7rem;">
+                        <img  src='{{product.design.image}}'  width="80" height="80"  />
+                    </div>
+                </div>
                 <div class="card-body">
-                <p class="card-text">{{product.type}} --- {{product.design.name}}</p>
-                <p class="card-text"><strong>{{product.price}}€</strong></p>
+                    <p class="card-text">{{product.type}} --- {{product.design.name}}</p>
+                    <p class="card-text"><strong>{{product.price}}€</strong></p>
                 </div>
             </div>
         </li>
