--- a/src/app/components/mis-disenos/mis-disenos.component.html
+++ b/src/app/components/mis-disenos/mis-disenos.component.html
@@ -1,9 +1,9 @@
 <div class="container p-1 ">
     <h2>Mis <strong>DISEÑOS:</strong></h2>
-    <ul class="row row-cols-4">
+    <ul class="row row-cols-4" style="padding: 0;">
         <li  *ngFor="let product of newDesigns" class="list-group-item p-2">
             <div class="card" style="width: 18rem;">
-                <img src={{product.image}} class="card-img-top" alt="...">
+                <img src={{product.image}} class="card-img-top" alt="..." style="padding: 2rem;">
                 <div class="card-body">
                     <div class="card-text  d-flex">
                         <p>{{product.name}}</p>
