--- a/src/app/components/mis-productos/mis-productos.component.html
+++ b/src/app/components/mis-productos/mis-productos.component.html
@@ -1,6 +1,6 @@
 <div class="container p-1 ">
     <h2>Mis <strong>PRODUCTOS:</strong></h2>
-    <ul class="row row-cols-4">
+    <ul class="row row-cols-4" style="padding: 0;">
         <li  *ngFor="let product of newProducts" class="list-group-item p-2">
             <div class="card" style="width: 18rem;">
                 <img src={{product.image}} class="card-img-top" alt="...">
@@ -21,6 +21,7 @@
         <div *ngIf="hayDesignBoton == true">
             <button class="btn btn-lg btn-outline-dark" (click)="getMore()">Cargar más</button>
         </div>
+        &nbsp;&nbsp;&nbsp;
         <button class="btn btn-lg btn-outline-dark" 
             (click)="openModal(1,7)">+ Subir producto</button>
     </div>
