--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-filter" viewBox="0 0 16 16">
                 <path d="M6 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"/>
                 </svg>
-                Precio
+                {{precio}}
             </div>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownPrecio">
                 <button class="dropdown-item" (click)="filterPrice(1,30)">1€ - 30€</button>
@@ -20,7 +20,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-filter" viewBox="0 0 16 16">
                 <path d="M6 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"/>
                 </svg>
-                Prenda
+                {{tipo}}
             </div>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownTipo">
                 <button class="dropdown-item" (click)="filterPrenda(1)">Camiseta</button>
@@ -32,15 +32,18 @@
         </li>
         
     </ul>
-    <h3 *ngIf=esNovedad><strong>NOVEDADES</strong>  de hoy filtro ({{this.precio}}, {{this.tipo}}):</h3> 
-    <h3 *ngIf=esBusqueda><strong>RESULTADO</strong>  busqueda ('{{this.busqueda}}', {{this.precio}}, {{this.tipo}}):</h3>
-    <h1 *ngIf=noHayProductos><strong>NO</strong> se ha encontrado ningún producto</h1> 
+    <h3 *ngIf=esNovedad><strong>NOVEDADES</strong>  de hoy:</h3> 
+    <!-- <h3 *ngIf=esNovedad><strong>NOVEDADES</strong>  de hoy filtro ({{this.precio}}, {{this.tipo}}):</h3>  -->
+    <!-- <h3 *ngIf=esBusqueda><strong>RESULTADO</strong>  busqueda ('{{this.busqueda}}', {{this.precio}}, {{this.tipo}}):</h3> -->
+    <div *ngIf=noHayProductos style="height:  24rem;">
+        <h1><strong>NO</strong> se ha encontrado ningún producto ...</h1> 
+    </div>
     <ul class="row row-cols-4" style="padding: 0;">
         <li  *ngFor="let product of newProducts" class="list-group-item p-2">
             <div class="card" style="width: 18rem;"> <!-- // height: 35rem; -->
                 <div style="position: relative;">
                     <img src={{product.image}} class="card-img-top"  height="350"  />
-                    <div style="position: absolute; top:10rem; left:7rem;">
+                    <div style="position: absolute; top:10rem; left:6rem;">
                         <img  src='{{product.design.image}}'  width="80" height="80"  />
                     </div>
                 </div>
@@ -52,7 +55,9 @@
         </li>
     </ul>
     
-    <div *ngIf="hayMas" class="d-flex justify-content-center p-2">
-        <button class="btn btn-lg btn-outline-dark" (click)="getMore()">Cargar más</button>
+    <div *ngIf="hayMas" class="d-flex justify-content-center p-2" >
+        <div style="padding-right: 30px;">
+            <button class="btn btn-lg btn-outline-dark" (click)="getMore()" >Cargar más</button>
+        </div>
     </div>
 </div>
