--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -51,6 +51,12 @@
                     <p class="card-text">{{product.type}} --- {{product.design.name}}</p>
                     <p class="card-text"><strong>{{product.price}}€</strong></p>
                 </div>
+                <a  style="position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                z-index: 1;" href="/#/product" (click)="sendArgument(product._id)"></a>
             </div>
         </li>
     </ul>
