bug home arreglado

--- a/src/app/components/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/components/barra-navegacion/barra-navegacion.component.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a href="/#/home">
+  <a href="/">
     <img src="../assets/images/Logo.svg" width="200" height="50" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
