--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -59,7 +59,7 @@
           <div class="col-md-4 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
             <div class="text-center ">
-              <a href="/#/home">
+              <a href="/">
                 <img src="../assets/images/Logo.svg" width="150" height="50" alt="">
               </a>
             </div>
