Ya v ala paginacion de producto y está bien hecha

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -20,7 +20,7 @@
                 height: 100%;
                 top: 0;
                 left: 0;
-                z-index: 1;" href="/#/product" (click)="sendArgument(imageFuncional.id)"></a>
+                z-index: 1;" href="/#/product/{{imageFuncional.id}}"></a>
                 </div>
             </li>
         </ul>
