--- a/src/app/components/mi-carrito/mi-carrito.component.html
+++ b/src/app/components/mi-carrito/mi-carrito.component.html
@@ -38,6 +38,9 @@
             <div style="padding-right: 30px;">
                 <button class="btn btn-lg btn-outline-dark" (click)="vaciarTodo()">Vaciar Carrito</button>
             </div>
+            <h3>
+                Precio Total del carrito : {{totalprice()}} €
+            </h3>
         </div>
     </div>
 </div>
