--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,7 +10,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdownPrecio">
                 <button class="dropdown-item" (click)="filterPrice(1,30)">1€ - 30€</button>
                 <div class="dropdown-divider"></div>
-                <button class="dropdown-item" (click)="filterPrice(30,70)">31€ - 70€</button>
+                <button class="dropdown-item" (click)="filterPrice(31,70)">31€ - 70€</button>
                 <div class="dropdown-divider"></div>
                 <button class="dropdown-item" (click)="filterPrice(71,1000)">71€ o más</button>
             </div>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="card-body">
                     <p class="card-text">{{product.type}} --- {{product.design.name}}</p>
-                    <p class="card-text"><strong>{{product.price}}€</strong></p>
+                    <p class="card-text"><strong name="precio">{{product.price}}</strong><strong>€</strong></p>
                 </div>
                 <a  style="position: absolute;
                 width: 100%;
